--- a/slider/index.html
+++ b/slider/index.html
@@ -12,7 +12,7 @@
     <button id = "btnL" class="left btn" onclick="left()"><</button>
         <div id="scr" class="img"></div>
     <button id = "btnR" class="right btn" onclick="right()">></button>
-        <div class="dotsParent" ></div>
+        <div class="dotsContainer" ></div>
 </div>
 <script src="script.js"></script>
 </body>
