--- a/budss/index.html
+++ b/budss/index.html
@@ -309,19 +309,19 @@
                 </div>
             </div>
             <picture class="social">
-                <img src="./images/facebook.png" alt="" class="social__top">
-                <img src="./images/twitter.png" alt="" class="social__bottom">
-                <img src="./images/inst.png" alt="" class="social__top">
-                <img src="./images/tiktok.png" alt="" class="social__bottom">
+                <img src="./images/facebook.png" alt="Facebook" class="social__top">
+                <img src="./images/twitter.png" alt="Twitter" class="social__bottom">
+                <img src="./images/inst.png" alt="Instagram" class="social__top">
+                <img src="./images/tiktok.png" alt="TikTok" class="social__bottom">
             </picture>
         </div>
         <div class="company">
             <picture class="company__logos">
-                <img src="./images/woo.png" alt="" class="">
-                <img src="./images/shopify.png" alt="" class="">
-                <img src="./images/squere.png" alt="" class="">
-                <img src="./images/squarespace.png" alt="" class="">
-                <img src="./images/clover.png" alt="" class="">
+                <img src="./images/woo.png" alt="Woo">
+                <img src="./images/shopify.png" alt="Shopify">
+                <img src="./images/squere.png" alt="Squere">
+                <img src="./images/squarespace.png" alt="squarespace">
+                <img src="./images/clover.png" alt="Clover">
             </picture>
         </div>
     </section>
